--- a/public/css/style.css
+++ b/public/css/style.css
@@ -657,6 +657,135 @@ iframe.code {
 	@apply text-[#0f0f0f] font-bold md:text-xl text-base truncate md:max-w-[180px] max-w-[80px];
 }
 
+
+/* Pricing */
+
+.pricing-container {
+	@apply md:w-[calc(100%-192px)] m-auto md:mt-[100px] mt-0;
+}
+
+.apps {
+	@apply flex items-center justify-center gap-x-5 md:mt-[100px];
+}
+
+.apps .app-container{
+	@apply md:w-[666px] w-full md:p-6 md:border border-solid border-bb md:rounded-[24px] md:mt-0 mt-[50px];
+}
+
+.apps .app-container2{
+	@apply md:block hidden md:w-[270px] md:p-[32px] md:pb-6 !pt-0 border border-solid border-bb md:rounded-[24px];
+}
+
+.others {
+	@apply md:text-2xl text-base font-semibold pt-[54px] pb-[32px] text-center;
+	 line-height: 1.1;
+}
+
+.inner-container {
+	@apply md:bg-[#f2f2f2] md:rounded-[24px] md:p-[30px] pb-0 md:pt-[30px] pt-0 p-2.5;
+}
+
+.inner-container a{
+	@apply md:block hidden;
+}
+
+.apps .apps-info{
+	@apply w-full rounded-[24px];
+}
+
+.apps .apps-pricing{
+	@apply w-full bg-[#f2f2f2] rounded-[24px];
+}
+
+.pricing-container .title{
+	@apply text-gray-sap md:text-2xl text-base font-semibold md:text-center text-left m-auto md:max-w-[868px] md:pr-0 md:pl-0 md:pt-4 pt-6 pl-6 pr-10;
+	line-height: 1.4;
+}
+
+.pricing-container h3{
+	@apply text-gray-sap md:text-aa text-[40px] font-extrabold md:text-center text-left md:m-auto md:max-w-[973px] md:w-auto w-[312px] md:pl-0 pl-6;
+	line-height: 1.3;
+}
+
+.pricing-container .incur{
+	@apply text-[#F5507D] md:text-aa text-[40px] font-extrabold;
+}
+
+.apps-info p{
+	@apply text-gray-aaa md:text-[20px] text-base font-bold;
+	line-height: 1;
+}
+
+.apps-info span{
+	@apply md:text-gray-aaa text-gray-bb  md:text-lg text-base font-normal ml-auto;
+	line-height: 1.1;
+}
+
+
+.apps-info .useflex .desktop{
+	@apply md:block hidden;
+	
+}
+
+.apps-info .useflex .mobile{
+	@apply md:hidden block italic;
+}
+
+.apps-info .useflex .mobile .perc{
+	@apply not-italic pl-1;
+}
+
+.apps-info .useflex {
+	@apply flex items-center px-3.5 md:py-[27px] py-0 md:h-auto h-[71px] border-t border-solid border-[rgba(15,15,15,0.1)];
+}
+
+
+
+.perc {
+	@apply line-through;
+}
+
+.app-pricing .useflex {
+	@apply flex items-center justify-center px-3.5 py-[27px] border-t border-solid border-[rgba(15,15,15,0.1)];
+	line-height: 1.2;
+}
+
+.bottom-btn {
+	@apply flex items-center px-3.5 py-[27px] bg-[#fff3dc] rounded-[18px] mt-5 md:mx-0 mx-2.5;
+}
+
+.bottom-btn .total {
+	@apply md:font-bold font-semibold;
+}
+
+.bottom-btn1 {
+	@apply flex justify-center items-center px-3.5 py-[27px] bg-[#fff3dc] rounded-[18px] md:mt-[49px] font-semibold;
+}
+
+.bottom-btn span{
+	@apply text-lg md:font-normal font-bold ml-auto text-[#08a02a];
+}
+
+.apps-info .useflex:nth-child(1) {
+	@apply md:block hidden border-0 pt-0 pr-0 md:pb-[27px] pb-0 justify-end;
+}
+
+.grab-linkBtn {
+	@apply md:hidden mt-[29px] h-[64px] flex items-center justify-center rounded-[60px] bg-[#ffed5d] text-base font-bold text-[#0f0f0f] mx-6;
+}
+
+.mobile-vcard {
+	@apply flex flex-col;
+}
+
+.dektop-txt {
+	@apply md:block hidden;
+}
+
+.mobile-txt {
+	@apply md:hidden block;	
+}
+
 /* frequently ansked question */
 
 .lan-asked {
